<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="26dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/add_channel"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addChannelNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/channel_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/addChannelDescriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/channel_description"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>